# Eclipse

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
eclipse/: CMakeLists.txt  eclipse.cpp  eclipse.h
examples/: CMakeLists.txt  simple_window.cpp
